--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -1252,6 +1252,12 @@ image::user_guide_images/eql_visualizer_1.png[]
 The `eql-query-pprint` visualizer allows you to explore your data "entities" by looking at subsets of it
 using queries similar to datomic pull queries like in the screenshots above.
 
+[NOTE]
+.Disable by default
+====
+The EQL query pprint is disable by default. To enable it call `(flow-storm.runtime.values/register-eql-query-pprint-extractor)`.
+====
+
 By entities it means maps which contains only keywords as their keys. Every other collection
 is just traversed.
 
@@ -1746,11 +1752,15 @@ image::user_guide_images/thread_trace_limit_menu.png[]
 image::user_guide_images/thread_trace_limit_dialog.png[]
 
 Let's say you added a limit of 1000. If you now run any code that generates more than a 1000 traces FlowStorm will only
-record those first 1000 traces and stop recording.
+record those first 1000 traces per thread and discard the rest as if recording is off.
+
 Your code will continue execution as normal, which you can break using
 your normal editor breaking commands if its an infinite loop, but now you have recordings to look at what is going on.
 
 You can set a limit of 0 to disable it again.
+
+You can set this limits at startup via the JVM options `"-Dflowstorm.threadTraceLimit=1000"` and
+`"-Dflowstorm.throwOnThreadLimit=true"`.
 
 This is not only useful for infinite loops. It can be used to limit your recordings if you think you can blow up your heap.
 
@@ -1823,6 +1833,8 @@ you can always disable by setting the `-Dclojure.storm.instrumentAutoPrefixes=fa
 ====
 When the process starts it will scan all source folders on the classpath (everything not inside a jar containing clojure files) and build
 a set of all top level namespace. All namespaces under those will be instrumented.
+Currently it doesn't detect single level namespaces, like when you have `src/core.clj`, if this is your case use
+instrumentOnlyPrefixes.
 ====
 
 If you prefer to be explicit about what gets instrumented you can use the JVM property `"-Dclojure.storm.instrumentOnlyPrefixes=YOUR_INSTRUMENTATION_STRING"`
@@ -2149,6 +2161,9 @@ and possible values.
 - `-Dflowstorm.styles=~/.flow-storm/big-fonts.css`
 - `-Dflowstorm.fileEditorCommand=emacsclient -n +\<<LINE>>:0 \<<FILE>>`
 - `-Dflowstorm.jarEditorCommand=emacsclient -n +\<<LINE>>:0 \<<JAR>>/\<<FILE>>`
+- `-Dflowstorm.threadTraceLimit=1000`
+- `-Dflowstorm.throwOnThreadLimit=true`
+- `-Dflowstorm.autoUpdateUI=false`
 
 == Only Clojure
 
